Bug 2037337 - Restore focus behavior when removing a slot but not the focused node. r=smaug

I guess it matched our previous behavior and you can argue that the
focused node hasn't been disconnected from the doc... The focus fixup
will pick it up if the node is no longer focusable.

Differential Revision: https://phabricator.services.mozilla.com/D298804